--- a/css/sub_aboutme_stylesheet.css
+++ b/css/sub_aboutme_stylesheet.css
@@ -122,6 +122,8 @@ a{
 /*섹션2 시작*/
 #section2{
     position: relative;
+    padding-top: 127px;
+    height: auto;
 }
 
 /*about me 시작*/
@@ -145,10 +147,9 @@ a{
 
 .contentTitle01{
     text-align: center;
-    margin-top: 70px;
+    padding-top: 70px;
 }
 .contentTitle01 img{}
-
 
 .graph{
     width: 100%;
@@ -227,39 +228,33 @@ a{
 #section4{
     position: relative;
 }
-.history{
-}
+.history{}
 .history h1{
-    margin-top: 50px;
+    margin-top: 70px;
     margin-bottom: 30px;
     text-align: center;
 }
-.historygraph{}
-.center{
-    width: 3px;
-    height: 330px;
-    background: #100ded;
-    margin: 0 auto;
+.historygraph{
     position: relative;
 }
-.historygraph .cont{
+.center{
+    width: 3px;
+    height: 360px;
+    background: #100ded;
+    margin: 0 auto;
+}
+.cont{
     color: #777777;
     font-weight: 600;
     font-size: 16px;
     font-family: 'NanumSquare';
     margin: 0 auto;
 }
-.historygraph .cont p{
+.cont p{
     color: #100ded;
     margin-bottom: 20px;
 }
-.cont{
-    margin: 0 auto;
-    margin-top: 100px;
-}
-.cont01{
-    
-}
+.cont01{}
 .cont02{}
 .cont03{}
 .cont04{}
@@ -268,55 +263,47 @@ a{
     height: 15px;
     background: #100ded;
     border-radius: 50%;
-    margin: 0 auto;
+    position: absolute;
+    right: 50%;
+    margin-right: -7px;
 }
 .cont01 .circle{
-    position: absolute;
-    top: 375px;
-    left: 50%;
-    margin-left: -7px;
+    top: 0;  
 }
 .cont02 .circle{
-    position: absolute;
-    top: 490px;
-    left: 50%;
-    margin-left: -7px;
+    top: 125px;
 }
-.cont03 .circle{
-    position: absolute;
-    top: 605px;
-    left: 50%;
-    margin-left: -7px;
+.cont03 .circle{ 
+    top: 235px;
 }
 .cont04 .circle{
+    top: 345px;
+}
+.cont div:last-child{
+    width: 162px;
     position: absolute;
-    top: 715px;
-    left: 50%;
-    margin-left: -7px;
 }
 .cont01 div:last-child{
-    text-align: left;
-    position: absolute;
-    top: 375px;
-    left: calc(50% + 30px);
+    top: 0;
+    left: 50%;
+    margin-left: 30px;
 }
 .cont02 div:last-child{
+    top: 125px;
     text-align: right;
-    position: absolute;
-    top: 490px;
-    right: calc(50% + 30px);
+    right: 50%;
+    margin-right: 30px;
 }
 .cont03 div:last-child{
-    text-align: left;
-    position: absolute;
-    top: 605px;
-    left: calc(50% + 30px);
+    top: 235px;
+    left: 50%;
+    margin-left: 30px;
 }
 .cont04 div:last-child{
+    top: 345px;
     text-align: right;
-    position: absolute;
-    top: 715px;
-    right: calc(50% + 30px);
+    right: 50%;
+    margin-right: 30px;
 }
 
 
